fix the register and login spacing

--- a/public/css/browse.css
+++ b/public/css/browse.css
@@ -35,7 +35,7 @@
     height: 100px;
 }
 
-.form-control {
+.form-fix {
     display: inline;
     width: 40%;
     height: 25px;
